fix: jib for java 17